# watchful-py

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.IN  MANIFEST.in  README.md  README_PYPI.md  README_PY_ENV.md  SECURITY.md  dev-requirements.txt  pylama.ini  pyproject.toml  release.sh  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
docs/source/: conf.py  index.rst  install.rst  modules.rst  usage.rst  watchful.attributes.rst  watchful.client.rst  watchful.enrich.rst  watchful.enricher.rst  watchful.rst
examples/: README.md  README_enrich.md  api_intro.ipynb  enrichment_intro.ipynb  requirements_api_intro.txt  requirements_enrichment_intro.txt
src/watchful/: VERSION  __about__.py  __init__.py  api.py  attributes.py  client.py  client2.py  enrich.py  enricher.py  types.py
tests/: conftest.py  test_0000_import_sdk.py  test_0001_sdk_version_and_default_conn.py  test_0001_version.py  test_0002_encoding.py  test_001.py  test_attributes.py
tests/client/: test_api.py  test_client.py  test_encoding.py
