################################################################################
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py310', 'py39', 'py38']
include = '\.py$'
exclude = '\.ipynb$'  # Exclude notebooks as they are mostly experimental, to
    # explicitly include where needed.
