[metadata]
name = watchful
version = file: src/watchful/VERSION
author = Runyan
author_email = runyan@watchful.io
description = Watchful API for Interacting with Watchful Environment
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
# url = https://github.com/Watchfulio/<WATCHFUL_API_REPO>
project_urls =
    Bug Tracker = https://github.com/pypa/<WATCHFUL_API_REPO>/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    watchful
license = MIT License
license_files =
    LICENSE
[options]
package_dir =
    = src
install_requires = 
    psutil==5.8.0
    spacy==3.1.3
packages = find:
include_package_data = True
# should be able to work on >=3.8
python_requires = >=3.8.12

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests