[metadata]
name = watchful
version = file: src/watchful/VERSION
author = Watchful, Inc.
author_email = engineering@watchful.io
description = Watchful API for Interacting with Watchful Environment
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
url = https://github.com/Watchfulio/watchful-py
project_urls =
    Bug Tracker = https://github.com/Watchfulio/watchful-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    watchful
license = MIT License
license_files =
    LICENSE
[options]
package_dir =
    = src
install_requires = 
    cchardet>=2.1.7
    chardet>=5.1.0
    flair>=0.11.3
    psutil>=5.9.2
    spacy>=3.4.1
    spacytextblob>=4.0.0
packages = find:
include_package_data = True
python_requires = >=3.7,<=3.10.9

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
